CabinetLink and ScanAssign added to patients view - New Editor deactivation

--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -129,7 +129,6 @@
             name="Patient administration">
       </command>
       <command
-            defaultHandler="edu.ualberta.med.biobank.handlers.MainAdministrationHandler"
             id="edu.ualberta.med.biobank.commands.mainAdmin"
             name="Main Administration">
       </command>
@@ -137,16 +136,6 @@
             id="edu.ualberta.med.biobank.category.patientsAdmin"
             name="Patients Administration">
       </category>
-      <command
-            categoryId="edu.ualberta.med.biobank.category.patientsAdmin"
-            id="edu.ualberta.med.biobank.commands.patients.scanLink"
-            name="Scan Link">
-      </command>
-      <command
-            categoryId="edu.ualberta.med.biobank.category.patientsAdmin"
-            id="edu.ualberta.med.biobank.commands.patients.cabinetLink"
-            name="Default Link">
-      </command>
       <command
             defaultHandler="edu.ualberta.med.biobank.handlers.ContainerTypeAddHandler"
             id="edu.ualberta.med.biobank.commands.addContainerType"
@@ -158,8 +147,19 @@
             name="Add Container">
       </command>
       <command
-            id="edu.ualberta.med.biobank.commands.patients.assignScanSamples"
-            name="Assign Scan Samples">
+            defaultHandler="edu.ualberta.med.biobank.handlers.OpenPatientFormHandler"
+            id="edu.ualberta.med.biobank.commands.patients.openPatientForm"
+            name="Open Patient Form">
+         <commandParameter
+               id="edu.ualberta.med.biobank.commands.patients.openPatientForm.editorId"
+               name="edu.ualberta.med.biobank.commands.patients.openPatientForm.editorId"
+               optional="true">
+         </commandParameter>
+         <commandParameter
+               id="edu.ualberta.med.biobank.commands.patients.openPatientForm.viewId"
+               name="edu.ualberta.med.biobank.commands.patients.openPatientForm.viewId"
+               optional="true">
+         </commandParameter>
       </command>
    </extension>
    <extension
@@ -186,96 +186,115 @@
             class="edu.ualberta.med.biobank.handlers.SiteAddHandler"
             commandId="edu.ualberta.med.biobank.commands.siteAdd">
          <activeWhen>
-            <reference
-                  definitionId="biobank2.loggedIn">
-            </reference>
+            <and>
+               <reference
+                     definitionId="biobank2.loggedIn">
+               </reference>
+               <reference
+                     definitionId="biobank2.mainPerpectiveSelected">
+               </reference>
+            </and>
          </activeWhen>
       </handler>
       <handler
             class="edu.ualberta.med.biobank.handlers.StudyAddHandler"
             commandId="edu.ualberta.med.biobank.commands.studyAdd">
          <activeWhen>
-            <reference
-                  definitionId="biobank2.loggedIn">
-            </reference>
+            <and>
+               <reference
+                     definitionId="biobank2.loggedIn">
+               </reference>
+               <reference
+                     definitionId="biobank2.mainPerpectiveSelected">
+               </reference>
+            </and>
          </activeWhen>
       </handler>
       <handler
             class="edu.ualberta.med.biobank.handlers.ClinicAddHandler"
             commandId="edu.ualberta.med.biobank.commands.clinicAdd">
          <activeWhen>
-            <reference
-                  definitionId="biobank2.loggedIn">
-            </reference>
+            <and>
+               <reference
+                     definitionId="biobank2.loggedIn">
+               </reference>
+               <reference
+                     definitionId="biobank2.mainPerpectiveSelected">
+               </reference>
+            </and>
          </activeWhen>
       </handler>
       <handler
             class="edu.ualberta.med.biobank.handlers.ContainerTypeAddHandler"
             commandId="edu.ualberta.med.biobank.commands.containerTypeAdd">
          <activeWhen>
-            <reference
-                  definitionId="biobank2.loggedIn">
-            </reference>
+            <and>
+               <reference
+                     definitionId="biobank2.loggedIn">
+               </reference>
+               <reference
+                     definitionId="biobank2.mainPerpectiveSelected">
+               </reference>
+            </and>
          </activeWhen>
       </handler>
       <handler
             class="edu.ualberta.med.biobank.handlers.ContainerAddHandler"
             commandId="edu.ualberta.med.biobank.commands.containerAdd">
          <activeWhen>
-            <reference
-                  definitionId="biobank2.loggedIn">
-            </reference>
+            <and>
+               <reference
+                     definitionId="biobank2.loggedIn">
+               </reference>
+               <reference
+                     definitionId="biobank2.mainPerpectiveSelected">
+               </reference>
+            </and>
          </activeWhen>
       </handler>
       <handler
-            class="edu.ualberta.med.biobank.handlers.ScanLinkHandler"
-            commandId="edu.ualberta.med.biobank.commands.patients.scanLink">
-         <activeWhen>
-            <reference
-                  definitionId="biobank2.patientsPerpectiveSelected">
-            </reference>
-         </activeWhen>
+            class="org.eclipse.ui.internal.handlers.NewEditorHandler"
+            commandId="org.eclipse.ui.window.newEditor">
          <enabledWhen>
-            <with
-                  variable="activePartId">
-               <equals
-                     value="edu.ualberta.med.biobank.views.patientsAdmin">
-               </equals>
-            </with>
+            <and>
+               <with
+                  variable="activeEditor">
+                  <instanceof
+                     value="org.eclipse.ui.IEditorPart">
+                  </instanceof>
+               </with>
+               <with
+                  variable="activeEditor">
+                  <not>
+                     <instanceof
+                        value="edu.ualberta.med.biobank.forms.BiobankFormBase">
+                     </instanceof>
+                  </not>
+               </with>
+            </and>
          </enabledWhen>
       </handler>
       <handler
-            class="edu.ualberta.med.biobank.handlers.CabinetLinkHandler"
-            commandId="edu.ualberta.med.biobank.commands.patients.cabinetLink">
-         <activeWhen>
-            <reference
-                  definitionId="biobank2.patientsPerpectiveSelected">
-            </reference>
-         </activeWhen>
+            class="edu.ualberta.med.biobank.handlers.MainAdministrationHandler"
+            commandId="edu.ualberta.med.biobank.commands.mainAdmin">
          <enabledWhen>
-            <with
-                  variable="activePartId">
-               <equals
-                     value="edu.ualberta.med.biobank.views.patientsAdmin">
-               </equals>
-            </with>
+            <reference
+                  definitionId="biobank2.patientViewActive">
+            </reference>
          </enabledWhen>
       </handler>
       <handler
-            class="edu.ualberta.med.biobank.handlers.AssignScanSamplesHandler"
-            commandId="edu.ualberta.med.biobank.commands.patients.assignScanSamples">
-             <activeWhen>
+            class="edu.ualberta.med.biobank.handlers.OpenPatientFormHandler"
+            commandId="edu.ualberta.med.biobank.commands.patients.openPatientForm">
+                        <activeWhen>
             <reference
                   definitionId="biobank2.patientsPerpectiveSelected">
             </reference>
          </activeWhen>
          <enabledWhen>
-            <with
-                  variable="activePartId">
-               <equals
-                     value="edu.ualberta.med.biobank.views.patientsAdmin">
-               </equals>
-            </with>
+            <reference
+                  definitionId="biobank2.patientViewActive">
+            </reference>
          </enabledWhen>
       </handler>
    </extension>
@@ -332,7 +351,7 @@
                <command
                      commandId="edu.ualberta.med.biobank.commands.clinicAdd"
                      id="edu.ualberta.med.biobank.menu.clinicAdd"
-                     label="Add Study"
+                     label="Add Clinic"
                      style="push">
                </command>
                <command
@@ -347,6 +366,12 @@
                      label="Add Container"
                      style="push">
                </command>
+               <visibleWhen
+                     checkEnabled="false">
+                  <reference
+                        definitionId="biobank2.mainPerpectiveSelected">
+                  </reference>
+               </visibleWhen>
             </menu>
             <command
                   commandId="edu.ualberta.med.biobank.commands.search"
@@ -442,7 +467,7 @@
                </visibleWhen>
             </command>
             <command
-                  commandId="edu.ualberta.med.biobank.commands.patients.scanLink"
+                  commandId="edu.ualberta.med.biobank.commands.patients.openPatientForm"
                   icon="icons/scanLink.png"
                   label="Scan Link"
                   style="push">
@@ -452,11 +477,15 @@
                         definitionId="biobank2.patientsPerpectiveSelected">
                   </reference>
                </visibleWhen>
+               <parameter
+                     name="edu.ualberta.med.biobank.commands.patients.openPatientForm.editorId"
+                     value="edu.ualberta.med.biobank.forms.ScanLinkEntryForm">
+               </parameter>
             </command>
             <command
-                  commandId="edu.ualberta.med.biobank.commands.patients.cabinetLink"
+                  commandId="edu.ualberta.med.biobank.commands.patients.openPatientForm"
                   icon="icons/defaultLink.png"
-                  label="Default link"
+                  label="Cabinet Link/Assign"
                   style="push">
                <visibleWhen
                      checkEnabled="false">
@@ -464,9 +493,13 @@
                         definitionId="biobank2.patientsPerpectiveSelected">
                   </reference>
                </visibleWhen>
+               <parameter
+                     name="edu.ualberta.med.biobank.commands.patients.openPatientForm.editorId"
+                     value="edu.ualberta.med.biobank.forms.CabinetLinkAssignEntryForm">
+               </parameter>
             </command>
             <command
-                  commandId="edu.ualberta.med.biobank.commands.patients.assignScanSamples"
+                  commandId="edu.ualberta.med.biobank.commands.patients.openPatientForm"
                   icon="icons/scanAssign.png"
                   label="Scan Assign"
                   style="push">
@@ -476,7 +509,11 @@
                         definitionId="biobank2.patientsPerpectiveSelected">
                   </reference>
                </visibleWhen>
-            </command>            
+               <parameter
+                     name="edu.ualberta.med.biobank.commands.patients.openPatientForm.editorId"
+                     value="edu.ualberta.med.biobank.forms.AssignSamplesLocationEntryForm">
+               </parameter>
+            </command>
          </toolbar>
       </menuContribution>
    </extension>
@@ -624,11 +661,11 @@
             name="Assign Samples Location Entry">
       </editor>
       <editor
-            class="edu.ualberta.med.biobank.forms.AddCabinetSampleEntryForm"
+            class="edu.ualberta.med.biobank.forms.CabinetLinkAssignEntryForm"
             default="false"
             icon="icons/defaultLink.png"
-            id="edu.ualberta.med.biobank.forms.CabinetLinkEntryForm"
-            name="Cabinet Link Entry ">
+            id="edu.ualberta.med.biobank.forms.CabinetLinkAssignEntryForm"
+            name="Cabinet Link/Assign Entry ">
       </editor>
       <editor
             class="edu.ualberta.med.biobank.forms.SampleViewForm"
@@ -730,5 +767,26 @@
             </equals>
          </with>
       </definition>
+      <definition
+            id="biobank2.patientViewActive">
+         <with
+               variable="activePartId">
+            <equals
+                  value="edu.ualberta.med.biobank.views.patientsAdmin">
+            </equals>
+         </with>
+      </definition>
+   </extension>
+   <extension
+         point="org.eclipse.ui.activities">
+      <activity
+            id="biobank2.activity.neweditor"
+            name="Activity for New Editor action">
+      </activity>
+      <activityPatternBinding
+            activityId="biobank2.activity.neweditor"
+            isEqualityPattern="true"
+            pattern="org.eclipse.ui/org.eclipse.ui.window.newEditor">
+      </activityPatternBinding>
    </extension>
 </plugin>
