Transfer libraries and utils class for database into biobank.common

--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -4,17 +4,9 @@ bin.includes = plugin.xml,\
                META-INF/,\
                icons/,\
                .,\
-               conf/,\
                lib/,\
-               lib/ini4j-0.5.1.jar,\
-               lib/sdk-writeable-client.framework.jarconf/,\
-               lib/sdk-writable-core.jar
+               scanlib.dll
 jars.compile.order = conf/,\
-                     lib/sdk-writeable-client.framework.jarconf/,\
                      .
-source.lib/sdk-writeable-client.framework.jarconf/ = src/
-source.conf/ = src/,\
-               lib/
 output.conf/ = bin/
-source.lib/sdk-writable-core.jar = src/
 Bundle-NativeCode: /scanlib.dll
