--- a/.gitignore
+++ b/.gitignore
@@ -15,4 +15,4 @@ runtime-biobank2.biobank2
 schema/schema-export.sql
 eclipse_ws/biobank2.tests/bin
 eclipse_ws/biobank2.importer/bin
-
+eclipse_ws/biobank.common/bin
