--- a/eclipse_ws/biobank.common/build.properties
+++ b/eclipse_ws/biobank.common/build.properties
@@ -1,6 +1,26 @@
-source.. = src/
-output.. = bin/
-bin.includes = plugin.xml,\
-               META-INF/,\
-               .,\
-               icons/
+bin.includes = META-INF/,\
+               lib/acegi-security-1.0.4.jar,\
+               lib/antlr-2.7.6.jar,\
+               lib/asm.jar,\
+               lib/axis.jar,\
+               lib/biobank2-beans.jar,\
+               lib/caGrid-CQL-cql.1.0-1.2.jar,\
+               lib/castor-1.0.2.jar,\
+               lib/cglib-2.1.3.jar,\
+               lib/cog-jglobus.jar,\
+               lib/commons-codec-1.3.jar,\
+               lib/commons-collections-3.2.jar,\
+               lib/commons-discovery-0.2.jar,\
+               lib/commons-lang-2.4.jar,\
+               lib/commons-logging-1.1.jar,\
+               lib/hibernate3.jar,\
+               lib/jaxrpc.jar,\
+               lib/log4j-1.2.14.jar,\
+               lib/sdk-client-framework.jar,\
+               lib/sdk-grid-remoting.jar,\
+               lib/sdk-security.jar,\
+               lib/sdk-writable-client-framework.jar,\
+               lib/spring.jar,\
+               lib/xercesImpl.jar,\
+               conf/,\
+               bin/
