remove some warnings

--- a/eclipse_ws/biobank.common/build.properties
+++ b/eclipse_ws/biobank.common/build.properties
@@ -23,4 +23,6 @@ bin.includes = META-INF/,\
                lib/spring.jar,\
                lib/xercesImpl.jar,\
                conf/,\
-               bin/
+               bin/,\
+               .
+source.. = src/
