--- a/plugin.xml
+++ b/plugin.xml
@@ -34,6 +34,16 @@
       <handler
             class="edu.ualberta.med.sampleProcessingRobot.handlers.ShowPerspectiveHandler"
             commandId="edu.ualberta.med.sampleProcessingRobot.commands.showPerspective">
+         <activeWhen>
+           <and>
+            <reference
+                  definitionId="biobank2.loggedIn">
+            </reference>
+            <reference
+                  definitionId="biobank2.siteSelected">
+            </reference>
+           </and> 
+         </activeWhen>
       </handler>
    </extension>
    <extension
@@ -47,6 +57,12 @@
                   icon="icons/robot.png"
                   label="Sample Robot Processing Administration"
                   style="push">
+               <visibleWhen
+                     checkEnabled="false">
+                  <reference
+                        definitionId="biobank2.mainPerpectiveSelected">
+                  </reference>
+               </visibleWhen>
             </command>
          </toolbar>
       </menuContribution>
