--- a/plugin.xml
+++ b/plugin.xml
@@ -4,23 +4,13 @@
 
    <extension
          point="org.eclipse.ui.views">
-      <category
-            name="Sample Category"
-            id="sampleProcessingRobot">
-      </category>
       <view
-            name="Sample View"
-            icon="icons/sample.gif"
-            category="sampleProcessingRobot"
-            class="edu.ualberta.med.sampleProcessingRobot.views.SampleView"
-            id="edu.ualberta.med.sampleProcessingRobot.views.SampleView">
+            allowMultiple="false"
+            class="edu.ualberta.med.sampleProcessingRobot.views.MainView"
+            icon="icons/robot.png"
+            id="edu.ualberta.med.sampleProcessingRobot.views.MainView"
+            name="Main Robot View">
       </view>
-   </extension>
-   <extension
-         point="org.eclipse.help.contexts">
-      <contexts
-            file="contexts.xml">
-      </contexts>
    </extension>
    <extension
          point="org.eclipse.ui.commands">
@@ -82,10 +72,10 @@
             targetID="edu.ualberta.med.sampleProcessingRobot.perspectives.MainPerspective">
          <view
                closeable="false"
-               id="edu.ualberta.med.sampleProcessingRobot.views.SampleView"
+               id="edu.ualberta.med.sampleProcessingRobot.views.MainView"
                minimized="false"
                moveable="false"
-               ratio="0.5"
+               ratio="0.95"
                relationship="right"
                relative="org.eclipse.ui.editorss"
                showTitle="true"
