include dll at runtime

--- a/build.properties
+++ b/build.properties
@@ -4,4 +4,6 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
-               libs/RXTXcomm.jar
+               libs/RXTXcomm.jar,\
+               libs/rxtxSerial.dll
+Bundle-NativeCode: libs/rxtxSerial.dll
