--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,8 @@ schema/schema-export.sql
 eclipse_ws/biobank2.tests/bin
 eclipse_ws/biobank2.importer/bin
 eclipse_ws/biobank.common/bin
+eclipse_ws/biobank2/scanlib.*
+runtime-BioSampleScan.BioSampleScan/
+runtime-BioSampleScan.product1/
+runtime-biobank2.product/
+runtime-biobank2.product1/
