--- a/eclipse_ws/biobank2.importer/.classpath
+++ b/eclipse_ws/biobank2.importer/.classpath
@@ -28,5 +28,6 @@
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.7-bin.jar"/>
 	<classpathentry kind="lib" path="lib/commons-lang-2.4.jar"/>
 	<classpathentry kind="lib" path="conf"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/biobank.common"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
