--- a/build.xml
+++ b/build.xml
@@ -14,7 +14,6 @@
 	<property name="eclipse.proj.dir" location="eclipse_ws/biobank2" />
 	<property name="eclipse.proj.dir.common" location="eclipse_ws/biobank.common" />
 	<property name="eclipse.proj.dir.importer" location="eclipse_ws/biobank2.importer" />
-	<property name="eclipse.proj.dir.tests" location="eclipse_ws/biobank2.importer" />
 	<property name="eclipse.proj.dir.junit" location="eclipse_ws/biobank2.tests" />
 	<property name="scripts.proj.dir" location="scripts" />
 	<!--tp-->
@@ -78,13 +77,28 @@
 	</condition>
 	<!-- end of copied part -->
 
+	<target name="check-jars-available">
+		<available file="jars" type="dir" property="jars.available" />
+	</target>
+
+	<target name="jars-download" depends="check-jars-available" unless="jars.available" description="downloads required jars from the host machine">
+		<mkdir dir="jars" />
+		<echo message="downloading biobank jars..." />
+		<exec executable="curl">
+			<arg value="--silent" />
+			<arg value="-obiobank_jars.tar.bz2" />
+			<arg value="http://${host}/biobank_jars.tar.bz2" />
+		</exec>
+		<untar src="biobank_jars.tar.bz2" compression="bzip2" dest="jars" />
+	</target>
+
 	<target name="check-cacore-sdk-available">
 		<available file="${cacore.sdk.dir}/build.xml" property="cacore.sdk.available" />
 	</target>
 
 	<target name="cacore-download" depends="check-cacore-sdk-available" unless="cacore.sdk.available" description="downloads caCORE SDK from the host machine">
-		<echo message="downloading caCORE SDK..." />
 		<mkdir dir="caCORE_SDK" />
+		<echo message="downloading caCORE SDK..." />
 		<exec executable="curl">
 			<arg value="--silent" />
 			<arg value="-o${cacore.sdk.filename}" />
@@ -116,21 +130,57 @@
 		</pathconvert>
 	</target>
 
-	<target name="deploy-eclipse" 
-		description="deploys the caCORE SDK beans to the eclipse project" 
-		depends="sdk-files">
+	<target name="deploy-eclipse" description="deploys the caCORE SDK beans to the eclipse project" depends="sdk-files">
+		<dependset>
+			<srcfilelist dir="${cacore.sdk.dir}/system/security/dist" files="sdk-security.jar" />
+			<targetfilelist dir="${eclipse.proj.dir.common}/lib" files="sdk-security.jar" />
+			<targetfilelist dir="${eclipse.proj.dir.importer}/lib" files="sdk-security.jar" />
+			<targetfilelist dir="${eclipse.proj.dir.junit}/lib" files="sdk-security.jar" />
+		</dependset>
 		<dependset>
 			<srcfilelist dir="${cacore.sdk.dir}/output/biobank2/package/remote-client/lib" files="${sdk.jar.files.basename}" />
 			<targetfilelist dir="${eclipse.proj.dir.common}/lib" files="${sdk.jar.files.basename}" />
 			<targetfilelist dir="${eclipse.proj.dir.importer}/lib" files="${sdk.jar.files.basename}" />
-			<targetfilelist dir="${eclipse.proj.dir.tests}/lib" files="${sdk.jar.files.basename}" />
+			<targetfilelist dir="${eclipse.proj.dir.junit}/lib" files="${sdk.jar.files.basename}" />
 		</dependset>
+		<copy todir="${eclipse.proj.dir.common}/lib" file="${cacore.sdk.dir}/system/security/dist/sdk-security.jar" />
+		<copy todir="${eclipse.proj.dir.importer}/lib" file="${cacore.sdk.dir}/system/security/dist/sdk-security.jar" />
+		<copy todir="${eclipse.proj.dir.junit}/lib" file="${cacore.sdk.dir}/system/security/dist/sdk-security.jar" />
+		<copy todir="${eclipse.proj.dir.junit}/lib" file="${cacore.sdk.dir}/writable-api/dist/sdk-writable-client-framework.jar" />
+		<copy todir="${eclipse.proj.dir.common}/lib">
+			<fileset dir="${cacore.sdk.dir}/output/biobank2/package/remote-client/conf">
+				<include name="application-config-client*.xml" />
+			</fileset>
+		</copy>
 		<copy todir="${eclipse.proj.dir.common}/lib">
 			<fileset dir="${cacore.sdk.dir}/output/biobank2/package/remote-client/lib" />
 		</copy>
-		<copy todir="${eclipse.proj.dir.common}/conf">
-			<fileset dir="${cacore.sdk.dir}/output/biobank2/package/remote-client/conf">
-				<include name="application-config-client*.xml" />
+		<copy todir="${eclipse.proj.dir.common}/lib">
+			<fileset dir="${cacore.sdk.dir}/system/lib">
+				<include name="commons-collections-3.2.jar" />
+				<include name="commons-logging-1.1.jar" />
+			</fileset>
+			<fileset dir="jars">
+				<include name="commons-lang-2.4.jar" />
+			</fileset>
+		</copy>
+		<copy todir="${eclipse.proj.dir}/lib">
+			<fileset dir="jars">
+				<include name="gface_0.9.1.jar" />
+				<include name="gluegen.jar" />
+				<include name="ini4j-0.5.1.jar" />
+				<include name="jdom.jar" />
+				<include name="scanlib.jar" />
+			</fileset>
+		</copy>
+		<copy todir="${eclipse.proj.dir.importer}/lib">
+			<fileset dir="${cacore.sdk.dir}/system/lib">
+				<include name="commons-collections-3.2.jar" />
+				<include name="commons-logging-1.1.jar" />
+			</fileset>
+			<fileset dir="jars">
+				<include name="commons-lang-2.4.jar" />
+				<include name="mysql-connector-java-5.1.7-bin.jar" />
 			</fileset>
 		</copy>
 		<copy todir="${eclipse.proj.dir.importer}/lib">
@@ -170,6 +220,7 @@
 	</target>
 
 	<target name="deploy" description="deploys to JBoss and Eclipse project">
+		<antcall target="jars-download" />
 		<antcall target="deploy-eclipse" />
 		<antcall target="deploy-jboss" />
 	</target>
