--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 caCORE_SDK
+jars/
 CLM_LLT_4_0_Release.zip
 CLM_LLT_4_0_Release/
 CSM_API_rel_401.zip
@@ -13,9 +14,14 @@ eclipse_ws/biobank2/log
 eclipse_ws/biobank2/src/edu/ualberta/med/biobank/test
 runtime-biobank2.biobank2
 schema/schema-export.sql
-eclipse_ws/biobank2.tests/bin
-eclipse_ws/biobank2.importer/bin
 eclipse_ws/biobank.common/bin
+eclipse_ws/biobank2.importer/bin
+eclipse_ws/biobank2.tests/bin
+eclipse_ws/biobank2/lib
+eclipse_ws/biobank.common/lib
+eclipse_ws/biobank2.importer/lib
+eclipse_ws/biobank2.tests/lib
+eclipse_ws/biobank2/conf
 eclipse_ws/biobank2/scanlib.*
 runtime-BioSampleScan.BioSampleScan/
 runtime-BioSampleScan.product1/
