--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -5,7 +5,9 @@ bin.includes = plugin.xml,\
                icons/,\
                .,\
                lib/,\
-               scanlib.dll
+               scanlib.dll,\
+               lib/org.eclipse.nebula.cwt_0.9.0.HEAD.jar,\
+               lib/org.eclipse.nebula.widgets.cdatetime_0.14.0.HEAD.jar
 jars.compile.order = conf/,\
                      .
 output.conf/ = bin/
