--- a/.gitignore
+++ b/.gitignore
@@ -17,10 +17,10 @@ schema/schema-export.sql
 eclipse_ws/biobank.common/bin
 eclipse_ws/biobank2.importer/bin
 eclipse_ws/biobank2.tests/bin
-eclipse_ws/biobank2/lib
-eclipse_ws/biobank.common/lib
-eclipse_ws/biobank2.importer/lib
-eclipse_ws/biobank2.tests/lib
+eclipse_ws/biobank2/lib/*.jar
+eclipse_ws/biobank.common/lib/*.jar
+eclipse_ws/biobank2.importer/lib/*.jar
+eclipse_ws/biobank2.tests/lib/*.jar
 eclipse_ws/biobank2/conf
 eclipse_ws/biobank2/scanlib.*
 runtime-BioSampleScan.BioSampleScan/
