Correct patientVisitEntryForm (#169 + samplesource save problem + date drawn validator)

--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -1,13 +1,13 @@
 source.. = src/
 output.. = bin/
-bin.includes = plugin.xml,\
-               META-INF/,\
+bin.includes = META-INF/,\
                icons/,\
                .,\
                lib/,\
                scanlib.dll,\
                lib/org.eclipse.nebula.cwt_0.9.0.HEAD.jar,\
-               lib/org.eclipse.nebula.widgets.cdatetime_0.14.0.HEAD.jar
+               lib/org.eclipse.nebula.widgets.cdatetime_0.14.0.HEAD.jar,\
+               plugin.xml
 jars.compile.order = conf/,\
                      .
 output.conf/ = bin/
