added Configuration menu heading

--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -477,10 +477,15 @@
                   label="Search"
                   style="push">
             </command>
+         </menu>
+         <menu
+               id="edu.ualberta.med.biobank.menu.configuration"
+               label="Configuration"
+               mnemonic="C">
             <command
                   commandId="org.eclipse.ui.window.preferences"
-                  id="edu.ualberta.med.biobank.menu.configuration"
-                  label="Configuration"
+                  id="edu.ualberta.med.biobank.menu.preferences"
+                  label="Preferences"
                   style="push">
             </command>
          </menu>
