--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ eclipse_ws/biobank2.importer/lib/*.jar
 eclipse_ws/biobank2.tests/lib/*.jar
 eclipse_ws/biobank2/conf
 eclipse_ws/biobank2/scanlib.*
+eclipse_ws/biobank2/*.bmp
 runtime-BioSampleScan.BioSampleScan/
 runtime-BioSampleScan.product1/
 runtime-biobank2.product/
