add preferences for scan link/assign and cabinet link/assign (#148)

--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -860,9 +860,15 @@
       </page>
       <page
             category="edu.ualberta.med.biobank.preferences.linkAssign"
-            class="edu.ualberta.med.biobank.preferences.ScanLinkPreferencePage"
-            id="edu.ualberta.med.biobank.preferences.scanLink"
-            name="ScanLink">
+            class="edu.ualberta.med.biobank.preferences.PalletScanPreferencePage"
+            id="edu.ualberta.med.biobank.preferences.palletScan"
+            name="Pallet Scan">
+      </page>
+      <page
+            category="edu.ualberta.med.biobank.preferences.linkAssign"
+            class="edu.ualberta.med.biobank.preferences.CabinetPreferencePage"
+            id="edu.ualberta.med.biobank.preferences.cabinet"
+            name="Cabinet">
       </page>
    </extension>
    <extension
